Improve android build piggybacking on original
Uses distribution build system to produce list of sources
Unfortunately requires putting files in the source tree and external calls to make.

--- a/.gitignore
+++ b/.gitignore
@@ -11,12 +11,14 @@
 # Never ignore these
 #
 !.gitignore
+!.config
 
 #
 # Normal output
 #
 /busybox
 /busybox_unstripped*
+/busybox.links
 
 #
 # Backups / patches
