--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.15.3android
-# Mon Jan 18 00:06:01 2010
+# Mon Jan 18 14:30:48 2010
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -208,7 +208,7 @@ CONFIG_OD=y
 CONFIG_PRINTF=y
 CONFIG_PWD=y
 CONFIG_READLINK=y
-# CONFIG_FEATURE_READLINK_FOLLOW is not set
+CONFIG_FEATURE_READLINK_FOLLOW=y
 # CONFIG_REALPATH is not set
 CONFIG_RM=y
 CONFIG_RMDIR=y
