--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.15.3android
-# Mon Jan 18 14:30:48 2010
+# Wed Jan 20 00:33:31 2010
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -34,7 +34,7 @@ CONFIG_FEATURE_SUID=y
 # CONFIG_SELINUX is not set
 # CONFIG_FEATURE_PREFER_APPLETS is not set
 CONFIG_BUSYBOX_EXEC_PATH="/proc/self/exe"
-CONFIG_FEATURE_SYSLOG=y
+# CONFIG_FEATURE_SYSLOG is not set
 # CONFIG_FEATURE_HAVE_RPC is not set
 
 #
@@ -575,10 +575,10 @@ CONFIG_FEATURE_BEEP_LENGTH_MS=0
 # CONFIG_FEATURE_CHAT_VAR_ABORT_LEN is not set
 # CONFIG_FEATURE_CHAT_CLR_ABORT is not set
 # CONFIG_CHRT is not set
-CONFIG_CROND=y
+# CONFIG_CROND is not set
 # CONFIG_FEATURE_CROND_D is not set
 # CONFIG_FEATURE_CROND_CALL_SENDMAIL is not set
-CONFIG_FEATURE_CROND_DIR="/system/etc/cron"
+CONFIG_FEATURE_CROND_DIR=""
 # CONFIG_CRONTAB is not set
 CONFIG_DC=y
 CONFIG_FEATURE_DC_LIBM=y
