Disable largefile support
Bionic's off_t is only 32 bits, so it doesn't work anyway.

--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.15.3android
-# Wed Jan 20 00:33:31 2010
+# Wed Jan 20 00:54:27 2010
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -46,7 +46,7 @@ CONFIG_BUSYBOX_EXEC_PATH="/proc/self/exe"
 # CONFIG_BUILD_LIBBUSYBOX is not set
 # CONFIG_FEATURE_INDIVIDUAL is not set
 # CONFIG_FEATURE_SHARED_BUSYBOX is not set
-CONFIG_LFS=y
+# CONFIG_LFS is not set
 CONFIG_CROSS_COMPILER_PREFIX="arm-eabi-"
 CONFIG_EXTRA_CFLAGS="-Os"
 
