--- a/.config
+++ b/.config
@@ -120,7 +120,7 @@ CONFIG_FEATURE_CPIO_O=y
 # CONFIG_FEATURE_DPKG_DEB_EXTRACT_ONLY is not set
 CONFIG_GUNZIP=y
 CONFIG_GZIP=y
-# CONFIG_LZOP is not set
+CONFIG_LZOP=y
 # CONFIG_LZOP_COMPR_HIGH is not set
 # CONFIG_RPM2CPIO is not set
 # CONFIG_RPM is not set
