Enable a few more applets
Reenable and fix a few more applets that had been previously been enabled

--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.15.3android
-# Wed Jan 20 00:54:27 2010
+# Thu Jan 28 17:42:58 2010
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -149,7 +149,7 @@ CONFIG_CHGRP=y
 CONFIG_CHMOD=y
 CONFIG_CHOWN=y
 # CONFIG_CHROOT is not set
-# CONFIG_CKSUM is not set
+CONFIG_CKSUM=y
 # CONFIG_COMM is not set
 CONFIG_CP=y
 CONFIG_CUT=y
@@ -161,8 +161,8 @@ CONFIG_FEATURE_DD_IBS_OBS=y
 CONFIG_DF=y
 CONFIG_FEATURE_DF_FANCY=y
 CONFIG_DIRNAME=y
-# CONFIG_DOS2UNIX is not set
-# CONFIG_UNIX2DOS is not set
+CONFIG_DOS2UNIX=y
+CONFIG_UNIX2DOS=y
 CONFIG_DU=y
 CONFIG_FEATURE_DU_DEFAULT_BLOCKSIZE_1K=y
 CONFIG_ECHO=y
@@ -182,7 +182,7 @@ CONFIG_HEAD=y
 CONFIG_ID=y
 CONFIG_INSTALL=y
 # CONFIG_FEATURE_INSTALL_LONG_OPTIONS is not set
-# CONFIG_LENGTH is not set
+CONFIG_LENGTH=y
 CONFIG_LN=y
 # CONFIG_LOGNAME is not set
 CONFIG_LS=y
@@ -204,12 +204,12 @@ CONFIG_MV=y
 CONFIG_NICE=y
 CONFIG_NOHUP=y
 CONFIG_OD=y
-# CONFIG_PRINTENV is not set
+CONFIG_PRINTENV=y
 CONFIG_PRINTF=y
 CONFIG_PWD=y
 CONFIG_READLINK=y
 CONFIG_FEATURE_READLINK_FOLLOW=y
-# CONFIG_REALPATH is not set
+CONFIG_REALPATH=y
 CONFIG_RM=y
 CONFIG_RMDIR=y
 # CONFIG_FEATURE_RMDIR_LONG_OPTIONS is not set
@@ -246,7 +246,7 @@ CONFIG_UNAME=y
 # CONFIG_UNEXPAND is not set
 # CONFIG_FEATURE_UNEXPAND_LONG_OPTIONS is not set
 CONFIG_UNIQ=y
-# CONFIG_USLEEP is not set
+CONFIG_USLEEP=y
 CONFIG_UUDECODE=y
 CONFIG_UUENCODE=y
 CONFIG_WC=y
@@ -332,9 +332,9 @@ CONFIG_FEATURE_VI_YANKMARK=y
 CONFIG_FEATURE_VI_SEARCH=y
 CONFIG_FEATURE_VI_USE_SIGNALS=y
 CONFIG_FEATURE_VI_DOT_CMD=y
-# CONFIG_FEATURE_VI_READONLY is not set
-# CONFIG_FEATURE_VI_SETOPTS is not set
-# CONFIG_FEATURE_VI_SET is not set
+CONFIG_FEATURE_VI_READONLY=y
+CONFIG_FEATURE_VI_SETOPTS=y
+CONFIG_FEATURE_VI_SET=y
 CONFIG_FEATURE_VI_WIN_RESIZE=y
 # CONFIG_FEATURE_VI_OPTIMIZE_CURSOR is not set
 CONFIG_FEATURE_ALLOW_EXEC=y
@@ -729,10 +729,10 @@ CONFIG_FEATURE_TELNET_TTYPE=y
 # CONFIG_FEATURE_TELNET_AUTOLOGIN is not set
 # CONFIG_TELNETD is not set
 # CONFIG_FEATURE_TELNETD_STANDALONE is not set
-# CONFIG_TFTP is not set
+CONFIG_TFTP=y
 # CONFIG_TFTPD is not set
-# CONFIG_FEATURE_TFTP_GET is not set
-# CONFIG_FEATURE_TFTP_PUT is not set
+CONFIG_FEATURE_TFTP_GET=y
+CONFIG_FEATURE_TFTP_PUT=y
 # CONFIG_FEATURE_TFTP_BLOCKSIZE is not set
 # CONFIG_TFTP_DEBUG is not set
 CONFIG_TRACEROUTE=y
@@ -754,9 +754,9 @@ CONFIG_UDHCPC_SLACK_FOR_BUGGY_SERVERS=0
 CONFIG_IFUPDOWN_UDHCPC_CMD_OPTIONS=""
 # CONFIG_VCONFIG is not set
 CONFIG_WGET=y
-# CONFIG_FEATURE_WGET_STATUSBAR is not set
-# CONFIG_FEATURE_WGET_AUTHENTICATION is not set
-# CONFIG_FEATURE_WGET_LONG_OPTIONS is not set
+CONFIG_FEATURE_WGET_STATUSBAR=y
+CONFIG_FEATURE_WGET_AUTHENTICATION=y
+CONFIG_FEATURE_WGET_LONG_OPTIONS=y
 # CONFIG_ZCIP is not set
 # CONFIG_TCPSVD is not set
 # CONFIG_TUNCTL is not set
@@ -790,10 +790,10 @@ CONFIG_KILL=y
 CONFIG_KILLALL=y
 CONFIG_KILLALL5=y
 # CONFIG_NMETER is not set
-# CONFIG_PGREP is not set
+CONFIG_PGREP=y
 CONFIG_PIDOF=y
-# CONFIG_FEATURE_PIDOF_SINGLE is not set
-# CONFIG_FEATURE_PIDOF_OMIT is not set
+CONFIG_FEATURE_PIDOF_SINGLE=y
+CONFIG_FEATURE_PIDOF_OMIT=y
 CONFIG_PKILL=y
 CONFIG_PS=y
 CONFIG_FEATURE_PS_WIDE=y
@@ -851,14 +851,14 @@ CONFIG_FEATURE_SH_IS_ASH=y
 CONFIG_ASH=y
 CONFIG_ASH_BASH_COMPAT=y
 CONFIG_ASH_JOB_CONTROL=y
-# CONFIG_ASH_READ_NCHARS is not set
-# CONFIG_ASH_READ_TIMEOUT is not set
+CONFIG_ASH_READ_NCHARS=y
+CONFIG_ASH_READ_TIMEOUT=y
 CONFIG_ASH_ALIAS=y
 # CONFIG_ASH_GETOPTS is not set
 CONFIG_ASH_BUILTIN_ECHO=y
-# CONFIG_ASH_BUILTIN_PRINTF is not set
+CONFIG_ASH_BUILTIN_PRINTF=y
 CONFIG_ASH_BUILTIN_TEST=y
-# CONFIG_ASH_CMDCMD is not set
+CONFIG_ASH_CMDCMD=y
 # CONFIG_ASH_MAIL is not set
 CONFIG_ASH_OPTIMIZE_FOR_SIZE=y
 CONFIG_ASH_RANDOM_SUPPORT=y
