Enable some extra applets, fix ip & nslookup.

--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.15.3android
-# Fri Jan 29 01:54:08 2010
+# Thu Feb  4 10:21:58 2010
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -148,7 +148,7 @@ CONFIG_CATV=y
 CONFIG_CHGRP=y
 CONFIG_CHMOD=y
 CONFIG_CHOWN=y
-# CONFIG_CHROOT is not set
+CONFIG_CHROOT=y
 CONFIG_CKSUM=y
 # CONFIG_COMM is not set
 CONFIG_CP=y
@@ -252,7 +252,7 @@ CONFIG_UUENCODE=y
 CONFIG_WC=y
 # CONFIG_FEATURE_WC_LARGE is not set
 # CONFIG_WHO is not set
-# CONFIG_WHOAMI is not set
+CONFIG_WHOAMI=y
 CONFIG_YES=y
 
 #
@@ -431,9 +431,9 @@ CONFIG_LAST_SYSTEM_ID=0
 #
 # Linux Ext2 FS Progs
 #
-CONFIG_CHATTR=y
+# CONFIG_CHATTR is not set
 # CONFIG_FSCK is not set
-CONFIG_LSATTR=y
+# CONFIG_LSATTR is not set
 
 #
 # Linux Module Utilities
@@ -534,7 +534,7 @@ CONFIG_MOUNT=y
 # CONFIG_FEATURE_MOUNT_HELPERS is not set
 # CONFIG_FEATURE_MOUNT_LABEL is not set
 # CONFIG_FEATURE_MOUNT_NFS is not set
-# CONFIG_FEATURE_MOUNT_CIFS is not set
+CONFIG_FEATURE_MOUNT_CIFS=y
 CONFIG_FEATURE_MOUNT_FLAGS=y
 CONFIG_FEATURE_MOUNT_FSTAB=y
 # CONFIG_PIVOT_ROOT is not set
@@ -692,10 +692,10 @@ CONFIG_IFUPDOWN_IFSTATE_PATH=""
 # CONFIG_FEATURE_INETD_SUPPORT_BUILTIN_DAYTIME is not set
 # CONFIG_FEATURE_INETD_SUPPORT_BUILTIN_CHARGEN is not set
 # CONFIG_FEATURE_INETD_RPC is not set
-# CONFIG_IP is not set
-# CONFIG_FEATURE_IP_ADDRESS is not set
-# CONFIG_FEATURE_IP_LINK is not set
-# CONFIG_FEATURE_IP_ROUTE is not set
+CONFIG_IP=y
+CONFIG_FEATURE_IP_ADDRESS=y
+CONFIG_FEATURE_IP_LINK=y
+CONFIG_FEATURE_IP_ROUTE=y
 # CONFIG_FEATURE_IP_TUNNEL is not set
 # CONFIG_FEATURE_IP_RULE is not set
 # CONFIG_FEATURE_IP_SHORT_FORMS is not set
@@ -716,7 +716,7 @@ CONFIG_NC_SERVER=y
 CONFIG_NETSTAT=y
 # CONFIG_FEATURE_NETSTAT_WIDE is not set
 CONFIG_FEATURE_NETSTAT_PRG=y
-# CONFIG_NSLOOKUP is not set
+CONFIG_NSLOOKUP=y
 CONFIG_PING=y
 # CONFIG_PING6 is not set
 CONFIG_FEATURE_FANCY_PING=y
