Add a couple features to help testcases pass
This completes fix set from 1.16.0 merge

--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.16.0android
-# Sun Feb  7 01:36:39 2010
+# Sun Feb  7 03:27:23 2010
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -238,14 +238,14 @@ CONFIG_STTY=y
 CONFIG_SYNC=y
 CONFIG_TAC=y
 CONFIG_TAIL=y
-# CONFIG_FEATURE_FANCY_TAIL is not set
+CONFIG_FEATURE_FANCY_TAIL=y
 CONFIG_TEE=y
 # CONFIG_FEATURE_TEE_USE_BLOCK_IO is not set
 CONFIG_TEST=y
 # CONFIG_FEATURE_TEST_64 is not set
 CONFIG_TOUCH=y
 CONFIG_TR=y
-# CONFIG_FEATURE_TR_CLASSES is not set
+CONFIG_FEATURE_TR_CLASSES=y
 # CONFIG_FEATURE_TR_EQUIV is not set
 CONFIG_TRUE=y
 CONFIG_TTY=y
