Enabled ntpd and dnsd applets.

--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.16.0android
-# Sun Mar 14 14:31:09 2010
+# Tue Mar 23 10:32:51 2010
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -662,7 +662,7 @@ CONFIG_ARP=y
 CONFIG_BRCTL=y
 CONFIG_FEATURE_BRCTL_FANCY=y
 CONFIG_FEATURE_BRCTL_SHOW=y
-# CONFIG_DNSD is not set
+CONFIG_DNSD=y
 # CONFIG_ETHER_WAKE is not set
 # CONFIG_FAKEIDENTD is not set
 # CONFIG_FTPD is not set
@@ -733,7 +733,7 @@ CONFIG_NETSTAT=y
 # CONFIG_FEATURE_NETSTAT_WIDE is not set
 CONFIG_FEATURE_NETSTAT_PRG=y
 CONFIG_NSLOOKUP=y
-# CONFIG_NTPD is not set
+CONFIG_NTPD=y
 # CONFIG_FEATURE_NTPD_SERVER is not set
 CONFIG_PING=y
 # CONFIG_PING6 is not set
